// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /aircrafts should return all aircrafts as an admin 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "radio",
        "endDate": "2025-08-31",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-09-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "arc",
        "endDate": "2026-03-15",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-03-16",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "insurance",
        "endDate": "2025-06-06",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-06-07",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "finavia",
        "endDate": "2025-12-31",
        "hardLimit": null,
        "softLimit": 0,
        "startDate": "2025-01-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
    ],
    "equipment": "SDFGY/S",
    "hourlyRateEur": 216,
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceTach": 4709,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 4778,
      "nextMaintenanceType": "100h",
      "totalPercentageHours": 10,
      "usablePercentageHours": 8,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "status": {
      "cautions": [
        {
          "description": "aircraft.alerts.usableHours",
          "hardLimit": 10,
          "softLimit": 8,
          "untilExpiration": 3,
        },
      ],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
      "remainingFuelLitres": 0,
      "tachUntilNextMaintenance": -5,
      "totalPercentageHours": 5,
      "totalTime": 4783,
      "usablePercentageHours": 3,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "radio",
        "endDate": "2025-08-31",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-09-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "arc",
        "endDate": "2026-05-04",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2025-05-05",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "insurance",
        "endDate": "2025-06-06",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-06-07",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "finavia",
        "endDate": "2025-12-31",
        "hardLimit": null,
        "softLimit": 0,
        "startDate": "2025-01-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
    ],
    "equipment": "VOY/S",
    "hourlyRateEur": 147,
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceTach": 6085,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 6130,
      "nextMaintenanceType": "50h",
      "totalPercentageHours": 5,
      "usablePercentageHours": 3,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFTP",
      "lastLandingTimeUtc": "2025-03-02T11:20:00.000Z",
      "remainingFuelLitres": 0,
      "tachUntilNextMaintenance": 12,
      "totalPercentageHours": 17,
      "totalTime": 6118,
      "usablePercentageHours": 15,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "yearOfManufacture": 2010,
  },
  {
    "active": false,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Piper PA-28",
    "documents": [],
    "equipment": "SFD",
    "hourlyRateEur": 228,
    "location": "EFNU",
    "maintenance": {
      "lastMaintenanceDate": "2024-04-15",
      "lastMaintenanceTach": 5180,
      "lastMaintenanceType": "50h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": "2025-05-05",
      "nextMaintenanceTach": 5230,
      "nextMaintenanceType": "50h",
      "totalPercentageHours": 5,
      "usablePercentageHours": 3,
    },
    "manufacturer": "Piper Aircraft",
    "model": "PA-28",
    "notes": [
      {
        "severity": "warning",
        "text": "Waiting for annual",
      },
    ],
    "registration": "OH-P28",
    "status": {
      "cautions": [
        {
          "description": "aircraft.alerts.usableHours",
          "hardLimit": 5,
          "softLimit": 3,
          "untilExpiration": 3,
        },
      ],
      "daysUntilNextMaintenance": Any<Number>,
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-03-04T13:20:00.000Z",
      "remainingFuelLitres": 0,
      "tachUntilNextMaintenance": 0,
      "totalPercentageHours": 5,
      "totalTime": 5230,
      "usablePercentageHours": 3,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "yearOfManufacture": 2005,
  },
]
`;

exports[`GET /aircrafts should return only active aircrafts as a user 1`] = `
[
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DA40",
    "documents": [
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "radio",
        "endDate": "2025-08-31",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-09-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "arc",
        "endDate": "2026-03-15",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-03-16",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "insurance",
        "endDate": "2025-06-06",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-06-07",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "finavia",
        "endDate": "2025-12-31",
        "hardLimit": null,
        "softLimit": 0,
        "startDate": "2025-01-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
    ],
    "equipment": "SDFGY/S",
    "hourlyRateEur": 216,
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceTach": 4709,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 100,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 4778,
      "nextMaintenanceType": "100h",
      "totalPercentageHours": 10,
      "usablePercentageHours": 8,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": [
      {
        "severity": "note",
        "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
      },
    ],
    "registration": "OH-STL",
    "status": {
      "cautions": [
        {
          "description": "aircraft.alerts.usableHours",
          "hardLimit": 10,
          "softLimit": 8,
          "untilExpiration": 3,
        },
      ],
      "lastLandingAirport": "EFHK",
      "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
      "remainingFuelLitres": 0,
      "tachUntilNextMaintenance": -5,
      "totalPercentageHours": 5,
      "totalTime": 4783,
      "usablePercentageHours": 3,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "yearOfManufacture": 2007,
  },
  {
    "active": true,
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "displayName": "Diamond DV20",
    "documents": [
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "radio",
        "endDate": "2025-08-31",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-09-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "arc",
        "endDate": "2026-05-04",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2025-05-05",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "insurance",
        "endDate": "2025-06-06",
        "hardLimit": 0,
        "softLimit": null,
        "startDate": "2024-06-07",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
      {
        "alertDaysBefore": 14,
        "createdAt": Any<String>,
        "createdBy": "k1mnimda",
        "documentId": "finavia",
        "endDate": "2025-12-31",
        "hardLimit": null,
        "softLimit": 0,
        "startDate": "2025-01-01",
        "updatedAt": Any<String>,
        "updatedBy": "k1mnimda",
      },
    ],
    "equipment": "VOY/S",
    "hourlyRateEur": 147,
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceTach": 6085,
      "lastMaintenanceType": "200h",
      "maintenanceCycle": 50,
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 6130,
      "nextMaintenanceType": "50h",
      "totalPercentageHours": 5,
      "usablePercentageHours": 3,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": [
      {
        "severity": "caution",
        "text": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
      },
    ],
    "registration": "OH-IHQ",
    "status": {
      "cautions": [],
      "lastLandingAirport": "EFTP",
      "lastLandingTimeUtc": "2025-03-02T11:20:00.000Z",
      "remainingFuelLitres": 0,
      "tachUntilNextMaintenance": 12,
      "totalPercentageHours": 17,
      "totalTime": 6118,
      "usablePercentageHours": 15,
      "warnings": [],
    },
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
    "yearOfManufacture": 2010,
  },
]
`;

exports[`GET /aircrafts/id Get aircraft with valid registration should return the aircraft 1`] = `
{
  "active": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "displayName": "Diamond DA40",
  "documents": [
    {
      "alertDaysBefore": 14,
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "documentId": "radio",
      "endDate": "2025-08-31",
      "hardLimit": 0,
      "softLimit": null,
      "startDate": "2024-09-01",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "alertDaysBefore": 14,
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "documentId": "arc",
      "endDate": "2026-03-15",
      "hardLimit": 0,
      "softLimit": null,
      "startDate": "2024-03-16",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "alertDaysBefore": 14,
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "documentId": "insurance",
      "endDate": "2025-06-06",
      "hardLimit": 0,
      "softLimit": null,
      "startDate": "2024-06-07",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "alertDaysBefore": 14,
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "documentId": "finavia",
      "endDate": "2025-12-31",
      "hardLimit": null,
      "softLimit": 0,
      "startDate": "2025-01-01",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "equipment": "SDFGY/S",
  "hourlyRateEur": 216,
  "location": "EFNU BF-hangar 21",
  "maintenance": {
    "lastMaintenanceDate": "2024-11-10",
    "lastMaintenanceTach": 4709,
    "lastMaintenanceType": "200h",
    "maintenanceCycle": 100,
    "nextMaintenanceDate": null,
    "nextMaintenanceTach": 4778,
    "nextMaintenanceType": "100h",
    "totalPercentageHours": 10,
    "usablePercentageHours": 8,
  },
  "manufacturer": "Diamond Aircraft",
  "model": "DA40",
  "notes": [
    {
      "severity": "note",
      "text": "Keep oil quantity level in the middle of the approved range - do not add to full!",
    },
  ],
  "registration": "OH-STL",
  "status": {
    "cautions": [
      {
        "description": "aircraft.alerts.usableHours",
        "hardLimit": 10,
        "softLimit": 8,
        "untilExpiration": 3,
      },
    ],
    "lastLandingAirport": "EFHK",
    "lastLandingTimeUtc": "2025-03-03T12:00:00.000Z",
    "remainingFuelLitres": 0,
    "tachUntilNextMaintenance": -5,
    "totalPercentageHours": 5,
    "totalTime": 4783,
    "usablePercentageHours": 3,
    "warnings": [],
  },
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
  "yearOfManufacture": 2007,
}
`;
